# ottsr

./: CMakeLists.txt  LICENSE  Makefile  README.md  build-debug.bat  build.bat  build.sh  example.conf  ottsr.c  ottsr.h  study-remainder-ott.c
.github/workflows/: build.yml
src/: ottsr.c  ottsr.h
